[project]
name = "the-numbers"
version = "0.0.1"
description = "NaNoGenMo 2025 project"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.11.0",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "pypdf>=6.1.3",
    "requests>=2.32.0",
    "selectolax>=0.4.0",
    "word2number>=1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
