[project]
name = "the-numbers"
version = "1.0.0"
description = "NaNoGenMo 2025 project"
authors = [
    {name = "Liza Daly", email = "lizadaly@gmail.com"}
]
license = {text = "Unlicense"}
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "num2words>=0.5.14",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "pypdf>=6.1.3",
    "requests>=2.32.0",
    "selectolax>=0.4.0",
    "word2number>=1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
